--- a/index.htm
+++ b/index.htm
@@ -64,7 +64,7 @@ Pyrimidines have a single-ring structure consisting of a six-membered ring. The 
     </div>
     <footer class="footer">
     <div class="footer-content">
-        <a href="about_us.html">About Us</a>
+        <a href="https://rnamamamo.github.io/rnamamamo.github.io/about_us.html">About Us</a>
         <p>Copyright © 2024 by BS BIO 2A</p>
     </div>
 </footer>
