--- a/about_us.htm
+++ b/about_us.htm
@@ -39,7 +39,7 @@
     
     <footer class="footer">
         <div class="footer-content">
-            <a href="index.php">RNA 3D Model</a>
+            <a href="https://rnamamamo.github.io/rnamamamo.github.io/about_us.html">RNA 3D Model</a>
             <p>Copyright © 2024 by BS BIO 2A</p>
         </div>
     </footer>
